--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -2,9 +2,9 @@ parameters:
     database_driver:   pdo_mysql
     database_host:     localhost
     database_port:     ~
-    database_name:     symfony
+    database_name:     plesynd
     database_user:     root
-    database_password: ~
+    database_password: flirtme
 
     mailer_transport:  smtp
     mailer_host:       localhost
