--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,12 @@
         "sensio/framework-extra-bundle": "dev-master",
         "sensio/generator-bundle": "dev-master",
         "jms/security-extra-bundle": "1.2.*",
-        "jms/di-extra-bundle": "1.1.*"
+        "jms/di-extra-bundle": "1.1.*",
+        "kriswallsmith/buzz": "dev-master",
+        "sensio/buzz-bundle": "dev-master",
+        "friendsofsymfony/rest": "dev-master",
+        "friendsofsymfony/rest-bundle": "dev-master",
+        "nelmio/api-doc-bundle": "dev-master"
     },
     "scripts": {
         "post-install-cmd": [
