parameters.yml added

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -25,7 +25,7 @@ twig:
 # Assetic Configuration
 assetic:
     debug:          %kernel.debug%
-    use_controller: true
+    use_controller: false
     bundles:        ['CorujaTodoBundle']
     #java: /usr/bin/java
     filters:
