--- a/src/Coruja/TodoBundle/Resources/config/routing.yml
+++ b/src/Coruja/TodoBundle/Resources/config/routing.yml
@@ -1,5 +1,5 @@
 CorujaTodoBundle_index:
-    pattern:  /
+    pattern:  /todo/
     defaults: { _controller: CorujaTodoBundle:Todo:index }
 
 todos:
