--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -20,7 +20,10 @@ monolog:
             level: info
 
 assetic:
-    use_controller: true
+    use_controller: false
+    bundles:        ['CorujaPlesyndBundle', 'CorujaTodoBundle']
+
+
 
 #swiftmailer:
 #    delivery_address: me@example.com
