--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,8 @@
+CorujaPlesyndBundle:
+    resource: "@CorujaPlesyndBundle/Controller/"
+    type:     annotation
+    prefix:   /
+
 CorujaTodoBundle:
     resource: "@CorujaTodoBundle/Resources/config/routing.yml"
     prefix:   /
