--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -80,6 +80,16 @@ sensio_framework_extra:
 
 nelmio_api_doc: ~
 
+nelmio_cors:
+    paths:
+        '^/todo/api/todos':
+            allow_origin: ['*']
+            allow_headers: ['X-REQUESTED-WITH', 'Content-Type']
+            allow_methods: ['POST', 'PUT', 'GET', 'DELETE', 'OPTIONS'],
+            # Location Header is used for POST Request Answers (URI of created Item
+            expose_headers: ['Location']
+            max_age: 3600
+
 
 # Swiftmailer Configuration
 swiftmailer:
