--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -3,9 +3,15 @@ CorujaPlesyndBundle:
     type:     annotation
     prefix:   /
 
-CorujaTodoBundle:
-    resource: "@CorujaTodoBundle/Resources/config/routing.yml"
+CorujaPlesyndBundle:
+    resource: "@CorujaTodoBundle/Controller/"
+    type:     annotation
     prefix:   /
+
+
+#CorujaTodoBundle:
+#    resource: "@CorujaTodoBundle/Resources/config/routing.yml"
+#    prefix:   /
 
 # Internal routing configuration to handle ESI
 #_internal:
