--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "sensio/buzz-bundle": "dev-master",
         "friendsofsymfony/rest": "dev-master",
         "friendsofsymfony/rest-bundle": "dev-master",
-        "nelmio/api-doc-bundle": "dev-master"
+        "nelmio/api-doc-bundle": "dev-master",
+        "nelmio/cors-bundle": "dev-master"
     },
     "scripts": {
         "post-install-cmd": [
