--- a/web/.htaccess
+++ b/web/.htaccess
@@ -11,7 +11,7 @@
     #</IfModule>
 
     RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteRule ^(.*)$ app_dev.php [QSA,L]
+    RewriteRule ^(.*)$ app.php [QSA,L]
 </IfModule>
 
 AddType text/cache-manifest .appcache
