--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -27,13 +27,10 @@ assetic:
     debug:          %kernel.debug%
     use_controller: false
     bundles:        ['CorujaPlesyndBundle', 'CorujaTodoBundle']
-    #java: /usr/bin/java
+    node:           /usr/bin/node
     filters:
-        cssrewrite: ~
-        #closure:
-        #    jar: %kernel.root_dir%/Resources/java/compiler.jar
-        #yui_css:
-        #    jar: %kernel.root_dir%/Resources/java/yuicompressor-2.4.7.jar
+        uglifyjs: ~
+        uglifycss: ~
 
 # Doctrine Configuration
 doctrine:
