added route for account_confirmation

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -23,11 +23,8 @@ CorujaUserBundle:
     type:     annotation
     prefix:   /
 
-
-
-fos_user_register:
-    resource: "@FOSUserBundle/Resources/config/routing/registration.xml"
-    prefix: /register
+fos_user_registration_confirm:
+    pattern:   "#/account_confirmation/{token}"
 
 
 #CorujaTodoBundle:
