--- a/composer.json
+++ b/composer.json
@@ -1,23 +1,30 @@
 {
     "name": "symfony/framework-standard-edition",
+    "license": "MIT",
+    "type": "project",
     "description": "The \"Symfony Standard Edition\" distribution",
     "autoload": {
-        "psr-0": { "": "src/" }
+        "psr-0": {
+            "": "src/"
+        }
     },
     "require": {
         "php": ">=5.3.3",
-        "symfony/symfony":"2.1.*",
-        "doctrine/orm":">=2.2.3,<2.4-dev",
-        "doctrine/doctrine-bundle":"1.0.*",
-        "twig/extensions":"1.0.*",
-        "symfony/assetic-bundle":"2.1.*",
-        "symfony/swiftmailer-bundle":"2.1.*",
-        "symfony/monolog-bundle":"2.1.*",
-        "sensio/distribution-bundle":"2.1.*",
-        "sensio/framework-extra-bundle":"2.1.*",
-        "sensio/generator-bundle":"2.1.*",
-        "jms/security-extra-bundle":"1.3.*",
-        "jms/di-extra-bundle":"1.2.*",
+        "symfony/symfony": "2.3.*",
+        "doctrine/orm": ">=2.2.3,<2.4-dev",
+        "doctrine/doctrine-bundle": "1.2.*",
+        "twig/extensions": "1.0.*",
+        "symfony/assetic-bundle": "2.3.*",
+        "symfony/swiftmailer-bundle": "2.3.*",
+        "symfony/monolog-bundle": "2.3.*",
+        "sensio/distribution-bundle": "2.3.*",
+        "sensio/framework-extra-bundle": "2.3.*",
+        "sensio/generator-bundle": "2.3.*",
+        "incenteev/composer-parameter-handler": "~2.0",
+
+        "jms/di-extra-bundle": "1.4.*@dev",
+        "jms/security-extra-bundle": "1.5.*@dev",
+        "jms/serializer-bundle": "0.12.*@dev",
         "kriswallsmith/buzz": "dev-master",
         "sensio/buzz-bundle": "dev-master",
         "friendsofsymfony/rest": "dev-master",
@@ -26,26 +33,37 @@
         "nelmio/api-doc-bundle": "dev-master",
         "nelmio/cors-bundle": "dev-master"
     },
+    "config": {
+        "bin-dir": "bin/"
+    },
     "scripts": {
         "post-install-cmd": [
+            "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile"
         ],
         "post-update-cmd": [
+            "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile"
-        ]
+            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets"
+        ],
+        "config": {
+            "bin-dir": "bin"
+        }
     },
-    "config": {
-        "bin-dir": "bin"
-    },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "extra": {
         "symfony-app-dir": "app",
-        "symfony-web-dir": "web"
+        "symfony-web-dir": "web",
+        "symfony-assets-install" : "symlink",
+        "incenteev-parameters": {
+            "file": "app/config/parameters.yml"
+        },
+        "branch-alias": {
+            "dev-master": "2.3-dev"
+        }
     }
 }
